# cpp-template

./: .lvimrc  .ycm_extra_conf.py  CMakeLists.txt  LICENSE
src/: main.cpp
