CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

PROJECT(template)
set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )

AUX_SOURCE_DIRECTORY(src SOURCES)
include_directories(inc)

#find_package(HDF5 REQUIRED)
#if(HDF5_FOUND)
    #include_directories(${HDF5_INCLUDE_DIRS})
#endif(HDF5_FOUND)

ADD_COMPILE_OPTIONS(-std=c++11)
ADD_EXECUTABLE(executable ${SOURCES})
